# NLP-SS25-Machine-Generated-Text-Detection-

./: .gitignore  main.py  pyproject.toml
notebooks/: 1-EDA.ipynb  3-LR-model.ipynb  4-GrammarError.ipynb
